--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <h1>First multimedia blogs sponsored by tap &trade;</h1>
     <h2>My faviourite song of all time!!</h2>
     <h3>Song 1 💃</h3>
-    <audio src="/Day01/1428_Hip_Hop_Latin_60sec.mp3" controls></audio>
+    <audio src="./1428_Hip_Hop_Latin_60sec.mp3" controls></audio>
     <h3>Song 2 💃</h3>
-    <audio src="/Day01/1428_Hip_Hop_Latin_60sec.wav" controls></audio>
+    <audio src="./1428_Hip_Hop_Latin_60sec.wav" controls></audio>
     <h3>Song 3 💃</h3>
-    <audio src="/Day01/1428_Hip_Hop_Latin_loop.wav" controls></audio>
+    <audio src="./1428_Hip_Hop_Latin_loop.wav" controls></audio>
   </head>
   <body>
     <h3>Top 3 movies list!!</h3>
     <h1>1.<del>Kgf</del>:Chapter 01</h1>
     <img
-      src="/Day01/kgf.jpg"
+      src="./kgf.jpg"
       alt="not able to dislay because u just copied the link"
       height="400"
       width="350"
@@ -26,9 +26,10 @@
     <video
       height="400"
       width="350"
-      src="/Day01/me.mp4"
-      poster="/Day01/img.jpg"
+      src="./me.mp4"
+      poster="./img.jpg"
       controls
     ></video>
   </body>
 </html>
+
